[package]
name = "commoncore"
version = "0.1.0"
authors = ["Gabriel Poesia <me@gpoesia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
num-rational = "0.4.0"
rand = "0.8.3"
rand_pcg = "0.3.0"

[lib]
name = "commoncore"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]